--- a/requirements.txt
+++ b/requirements.txt
@@ -63,7 +63,7 @@ nbformat==5.2.0
 nest-asyncio==1.5.4
 nltk==3.7
 notebook==6.4.8
-numpy==1.22.3
+numpy
 oauthlib==3.2.0
 opt-einsum==3.3.0
 packaging==21.3
