--- a/requirements.txt
+++ b/requirements.txt
@@ -67,7 +67,7 @@ numpy
 oauthlib==3.2.0
 opt-einsum==3.3.0
 packaging==21.3
-pandas==1.4.1
+pandas
 pandocfilters==1.5.0
 parso==0.8.3
 pickleshare==0.7.5
