--- a/requirements.txt
+++ b/requirements.txt
@@ -95,7 +95,7 @@ requests==2.27.1
 requests-oauthlib==1.3.1
 rsa==4.8
 scikit-learn==1.0.2
-scipy==1.8.0
+scipy
 semver==2.13.0
 Send2Trash==1.8.0
 six==1.16.0
